# bundle_adjustment_eigen

./: CMakeLists.txt  README.md
include/: eigen_type.h  vertex.h
src/: bundle_adjustment.cc  test_solver.cc
